--- a/reduxEasyDemo/package.json
+++ b/reduxEasyDemo/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-navigation": "^2.0.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
