--- a/完整导航应用Demo/test/android/app/build.gradle
+++ b/完整导航应用Demo/test/android/app/build.gradle
@@ -144,6 +144,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-smart-barcode')
+    compile project(':react-native-spinkit')
     compile project(':react-native-code-push')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
