--- a/完整导航应用Demo/test/android/settings.gradle
+++ b/完整导航应用Demo/test/android/settings.gradle
@@ -1,5 +1,11 @@
 rootProject.name = 'test'
+include ':react-native-spinkit'
+project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spinkit/android')
 include ':react-native-code-push'
 project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
+
+include ':react-native-smart-barcode'
+project(':react-native-smart-barcode').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-smart-barcode/android')
+
 
 include ':app'
