--- a/完整导航应用Demo/test/android/app/build.gradle
+++ b/完整导航应用Demo/test/android/app/build.gradle
@@ -144,6 +144,15 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-view-shot')
+    compile project(':react-native-svg')
+    compile project(':react-native-spinkit')
+    compile project(':react-native-smart-barcode')
+    compile project(':react-native-fs')
+    compile project(':react-native-fetch-blob')
+    compile project(':react-native-fetch-blob')
+    compile project(':react-native-fs')
+    compile project(':react-native-view-shot')
     compile project(':react-native-svg')
     compile project(':react-native-smart-barcode')
     compile project(':react-native-spinkit')
