--- a/完整导航应用Demo/test/android/app/src/main/AndroidManifest.xml
+++ b/完整导航应用Demo/test/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
 	<uses-feature android:name="android.hardware.camera"/>
 	<uses-feature android:name="android.hardware.camera.autofocus"/>
 
+	// 添加下面的两句
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
 	<uses-sdk
 			android:minSdkVersion="16"
 			android:targetSdkVersion="22"/>
